external/1/2/3/4/kiali-virtualservice/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
spec:
  gateways:
    - kubeflow/kubeflow-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /kiali/
      rewrite:
        uri: "/kiali/"
      route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001
